--- a/drumkit/index.html
+++ b/drumkit/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Drum Kit</title>
+  <style>
+    body {
+      background-image: url(/drumkit/img/kanye_background.jpg);
+    }
+  </style>
 </head>
 
 <body>
 
 
 
-
 <script>  
   window.addEventListener("keydown", function (e) {
-    console.log(e)
+    console.log(e.keyCode)
   })
 </script>
+
 </body>
 </html>
