--- a/drumkit/index.html
+++ b/drumkit/index.html
@@ -5,12 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="/drumkit/styles/styles.css">
-
-  <style>
-    body {
-      background-image: url(/drumkit/img/kanye_background.jpg);
-    }
-  </style>
 </head>
 
 <body>
@@ -75,6 +69,14 @@
     audio.play()
     key.classList.add("playing")
   })
+
+  function removeTransition(e) {
+    if (e.propertyName !== "transition") return
+    this.classList.remove("playing")
+  }
+
+  const keys = document.querySelectorAll(".key")
+  keys.forEach(key => key.addEventListener("transitionend", removeTransition))
 </script>
 
 </body>
