--- a/css_variables_3/index.html
+++ b/css_variables_3/index.html
@@ -30,7 +30,11 @@
     img {
       padding: var(--spacing);
       background: var(--base);
-      filter: var(--blur);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
     }
 
     /*
@@ -56,6 +60,14 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll(".controls input")
+
+    function handleUpdate() {
+      console.log(this.value)
+    }
+
+    inputs.forEach(input => input.addEventListener("change", handleUpdate))
+    inputs.forEach(input => input.addEventListener("mousemove", handleUpdate))
   </script>
 
 </body>
