--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -38,12 +38,15 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
-    const fifteen = inventors.filter(function(inventor) {
+    const fifteen = inventors.filter(inventor => {
       if (inventor.year >= 1500 && inventor.year <= 1599) {
         return true
       }
     })
-    console.log(fifteen)
+    console.table(fifteen)
+
+    const fifteenOne = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599)
+    console.table(fifteenOne)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
