add .map function

--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -51,6 +51,14 @@
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
+    const fullNames = inventors.map(inventor => 
+      inventor.first + " " + inventor.last
+    )
+    console.log(fullNames)
+    const fullNamesTemplate = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    console.table(fullNamesTemplate)
+
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
