--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -58,9 +58,17 @@
     const fullNamesTemplate = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
     console.table(fullNamesTemplate)
 
-
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+
+    const orderedByBirthday = inventors.sort(function(firstPerson, secondPerson) {
+      if (firstPerson.year > secondPerson.year) {
+        return 1
+      } else {
+        return -1
+      }
+    })
+    console.table(orderedByBirthday)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
