--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -70,6 +70,9 @@
     })
     console.table(orderedByBirthday)
 
+    const orderedByBirthdayShorthand = inventors.sort((firstPerson, secondPerson) => firstPerson.year > secondPerson.year ? 1 : -1)
+    console.table(orderedByBirthdayShorthand)
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
