add sort function with math

--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -82,7 +82,14 @@
     console.table(totalYearsLived)
 
     // 5. Sort the inventors by years lived
-    
+    const oldest = inventors.sort(function(firstPerson, secondPerson) {
+      if ((firstPerson.passed - firstPerson.year) > (secondPerson.passed - secondPerson.year)) {
+        return 1
+      } else {
+        return -1
+      }
+    })
+    console.table(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
