--- a/array_cardio_4/index.html
+++ b/array_cardio_4/index.html
@@ -102,18 +102,36 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-    const category = document.querySelector(".mw-category")
-    const links = Array.from(category.querySelectorAll("a"))
-    const de = links.map(link => link.textContent)
+    // const category = document.querySelector(".mw-category")
+    // const links = Array.from(category.querySelectorAll("a"))
+    // const de = links.map(link => link.textContent)
 
-    
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const peopleByLast = people.sort((firstPerson, nextPerson) => {
+      const [alast, afirst] = firstPerson.split(", ")
+      const [blast, bfirst] = nextPerson.split(", ")
+      return alast > blast ? 1 : -1
+    })
+    console.table(peopleByLast)
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce(function (object, item) {
+      if (!object[item]) {
+        object[item] = 0
+      }
+      object[item] += 1
+      
+      return object
+    }, {})
+
+    console.table(transportation)
 
   </script>
 </body>
