--- a/flex_panels_5/index.html
+++ b/flex_panels_5/index.html
@@ -45,6 +45,9 @@
       background-size: cover;
       background-position: center;
       flex: 1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -58,6 +61,8 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      border: 1px solid red;
+
     }
 
     .panel p {
