--- a/flex_panels_5/index.html
+++ b/flex_panels_5/index.html
@@ -48,6 +48,7 @@
       justify-content: center;
       align-items: center;
       display: flex;
+      flex-direction: column;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -61,9 +62,23 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
-      border: 1px solid red;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
     }
+
+    .panel > *:first-child {
+      transform: translateY(-100%);
+    }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+
+    .panel > *:last-child {
+      transform: translateY(100%);
+    }
+
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -77,6 +92,7 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size: 40px;
     }
 
@@ -112,7 +128,14 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll(".panels")
 
+    function toggleOpen() {
+      this.classList.toggleOpen()
+    }
+
+    panels.forEach(panels => panels.addEventListener("click", toggleOpen))
+    
   </script>
 
 
