--- a/ajax_type_6/index.html
+++ b/ajax_type_6/index.html
@@ -17,6 +17,27 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+const cities = []
+
+fetch(endpoint)
+  .then(data => data.json())
+  .then(dataJSON => cities.push(...dataJSON))
+
+function findMatches(wordToMatch, cities) {
+  return cities.filter(place => {
+    return place.city.match(`${wordToMatch}`) || place.state.match(`${wordToMatch}`)
+  })
+}
+
+function displayMatches() {
+
+}
+
+const searchInput = document.querySelector(".search")
+const suggestions = document.querySelector(".suggestions")
+
+searchInput.addEventListener("change", displayMatches)
+
 </script>
 </body>
 </html>
