--- a/ajax_type_6/index.html
+++ b/ajax_type_6/index.html
@@ -30,13 +30,14 @@ function findMatches(wordToMatch, cities) {
 }
 
 function displayMatches() {
-
+  console.log(this.value)
 }
 
 const searchInput = document.querySelector(".search")
 const suggestions = document.querySelector(".suggestions")
 
 searchInput.addEventListener("change", displayMatches)
+searchInput.addEventListener("keyup", displayMatches)
 
 </script>
 </body>
