--- a/array_cardio-7/index.html
+++ b/array_cardio-7/index.html
@@ -39,11 +39,21 @@
       return currentYear - person.year >= 19
     })
     console.log({isAdult})
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    const allAdult = people.every(person => {
+      const currentYear = (new Date()).getFullYear()
+      return currentYear - person.year >= 19
+    })
+    console.log({allAdult})
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
+    const comment = comments.find(id => id.id == "823423")
+    console.log(comment)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
