--- a/array_cardio-7/index.html
+++ b/array_cardio-7/index.html
@@ -52,12 +52,16 @@
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
-    const comment = comments.find(id => id.id == "823423")
+    const comment = comments.find(id => id.id === 823423)
     console.log(comment)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const commentIndex = comments.findIndex(comment => comment.id === 823423)
+    console.log(commentIndex)
+    comments.splice(commentIndex, 1)
 
   </script>
 </body>
