--- a/drumkit_1/index.html
+++ b/drumkit_1/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="/drumkit/styles/styles.css">
+  <link rel="stylesheet" href="/drumkit_1/styles/styles.css">
 </head>
 
 <body>
