--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -16,6 +16,12 @@
   ctx.lineJoin = "#BADA55"
   ctx.lineJoin = "round"
   ctx.lineJoin = "round"
+
+  let isDrawing = false
+  let lastX = 0
+  let lastY = 0
+
+  
 </script>
 
 <style>
