--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -21,7 +21,16 @@
   let lastX = 0
   let lastY = 0
 
-  
+  function draw(e) {
+    if(!isDrawing) return //Stop function from running when not clicked/moused down
+
+    console.log(e)
+  }
+
+  canvas.addEventListener("mousemove", draw)
+  canvas.addEventListener("mousedown", () => isDrawing = true)
+  canvas.addEventListener("mouseup", () => isDrawing = false)
+  canvas.addEventListener("mouseout", () => isDrawing = false)
 </script>
 
 <style>
