add line drawing

--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -22,9 +22,13 @@
   let lastY = 0
 
   function draw(e) {
-    if(!isDrawing) return //Stop function from running when not clicked/moused down
-
+    if (!isDrawing) return //Stop function from running when not clicked/moused down
+    
     console.log(e)
+    ctx.beginPath()
+    ctx.moveTo(lastX, lastY)
+    ctx.lineTo(e.offsetX, e.offsetY)
+    ctx.stroke()
   }
 
   canvas.addEventListener("mousemove", draw)
