--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -25,14 +25,24 @@
     if (!isDrawing) return //Stop function from running when not clicked/moused down
     
     console.log(e)
+    // start from
     ctx.beginPath()
     ctx.moveTo(lastX, lastY)
+    // draw line code
     ctx.lineTo(e.offsetX, e.offsetY)
     ctx.stroke()
+    // update last x and y
+    [lastX. lastY] = [e.offsetX, e.offsetY]
+    
   }
 
   canvas.addEventListener("mousemove", draw)
-  canvas.addEventListener("mousedown", () => isDrawing = true)
+
+  canvas.addEventListener("mousedown", (e) => {
+  isDrawing = true
+  [lastX. lastY] = [e.offsetX, e.offsetY]
+  })
+
   canvas.addEventListener("mouseup", () => isDrawing = false)
   canvas.addEventListener("mouseout", () => isDrawing = false)
 </script>
