--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -15,7 +15,8 @@
   ctx.strokeStyle = "#BADA55"
   ctx.lineJoin = "#BADA55"
   ctx.lineJoin = "round"
-  ctx.lineJoin = "round"
+  ctx.lineCap = "round"
+  ctx.lineWidth = 100
 
   let isDrawing = false
   let lastX = 0
@@ -25,23 +26,25 @@
     if (!isDrawing) return //Stop function from running when not clicked/moused down
     
     console.log(e)
-    // start from
+
     ctx.beginPath()
     ctx.moveTo(lastX, lastY)
-    // draw line code
+
     ctx.lineTo(e.offsetX, e.offsetY)
     ctx.stroke()
-    // update last x and y
-    [lastX. lastY] = [e.offsetX, e.offsetY]
-    
-  }
 
-  canvas.addEventListener("mousemove", draw)
+    lastX = e.offsetX
+    lastY = e.offsetY
+  }
 
   canvas.addEventListener("mousedown", (e) => {
   isDrawing = true
-  [lastX. lastY] = [e.offsetX, e.offsetY]
+  lastX = e.offsetX
+  lastY = e.offsetY
   })
+
+  canvas.addEventListener("mousemove", draw)
+
 
   canvas.addEventListener("mouseup", () => isDrawing = false)
   canvas.addEventListener("mouseout", () => isDrawing = false)
