--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -21,11 +21,14 @@
   let isDrawing = false
   let lastX = 0
   let lastY = 0
+  let hue = 0
+
 
   function draw(e) {
     if (!isDrawing) return //Stop function from running when not clicked/moused down
     
     console.log(e)
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`
 
     ctx.beginPath()
     ctx.moveTo(lastX, lastY)
@@ -35,6 +38,7 @@
 
     lastX = e.offsetX
     lastY = e.offsetY
+    hue += 1
   }
 
   canvas.addEventListener("mousedown", (e) => {
