--- a/html_canvas_8/index.html
+++ b/html_canvas_8/index.html
@@ -22,6 +22,7 @@
   let lastX = 0
   let lastY = 0
   let hue = 0
+  let grow = true
 
 
   function draw(e) {
@@ -29,6 +30,7 @@
     
     console.log(e)
     ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`
+    
 
     ctx.beginPath()
     ctx.moveTo(lastX, lastY)
@@ -39,6 +41,17 @@
     lastX = e.offsetX
     lastY = e.offsetY
     hue += 1
+    if (hue >= 360) {
+      hue = 0
+    }
+    if (ctx.lineWidth >= 125 || ctx.lineWidth <= 10) {
+      grow = !grow
+    }
+    if (grow) {
+    ctx.lineWidth++
+    } else {
+      ctx.lineWidth--
+    }
   }
 
   canvas.addEventListener("mousedown", (e) => {
