add console.info, error, warn

--- a/dev_tool_tricks_9/index.html
+++ b/dev_tool_tricks_9/index.html
@@ -18,18 +18,27 @@
     }
 
     // Regular
+    console.log("hello")
 
     // Interpolated
+    console.log("Hello I am a %s string", "shit")
+    let shit = "shit"
+    console.log(`Hello I am a ${shit} string`)
 
     // Styled
+    console.log("%cI am some great text", "font-size: 50px background: red;")
 
     // warning!
+    console.warn("oh No")
 
     // Error :|
+    console.error("shit")
 
     // Info
+    console.info("crocs eat 4 people a year")
 
     // Testing
+    console.assert(1===2)
 
     // clearing
 
