--- a/dev_tool_tricks_9/index.html
+++ b/dev_tool_tricks_9/index.html
@@ -38,13 +38,24 @@
     console.info("crocs eat 4 people a year")
 
     // Testing
-    console.assert(1===2)
+    const p = document.querySelector("p")
+    console.assert(p.classList.contains("ouch"), "That is wrong!")
 
     // clearing
+    console.clear()
 
     // Viewing DOM Elements
+    console.log(p)
+    console.dir(p)
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`)
+      console.log(`This is ${dog.name}`)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`)
+      console.groupEnd(`${dog.name}`)
+    })
 
     // counting
 
