--- a/dev_tool_tricks_9/index.html
+++ b/dev_tool_tricks_9/index.html
@@ -50,7 +50,7 @@
 
     // Grouping together
     dogs.forEach(dog => {
-      console.group(`${dog.name}`)
+      console.groupCollapsed(`${dog.name}`)
       console.log(`This is ${dog.name}`)
       console.log(`${dog.name} is ${dog.age} years old`)
       console.log(`${dog.name} is ${dog.age * 7} dog years old`)
@@ -58,8 +58,25 @@
     })
 
     // counting
+    console.count("Taylor")
+    console.count("Taylor")
+    console.count("Tom")
+    console.count("Taylor")
+    console.count("Taylor")
+    console.count("Tom")
+    console.count("Taylor")
+    console.count("Tom")
 
     // timing
+    console.time("fetching data")
+    fetch("https://api.github.com/users/wesbos")
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd("fetching data")
+        console.log(data)
+      })
+
+      console.table(dogs)
 
   </script>
 </body>
