--- a/hold_shift_10/index.html
+++ b/hold_shift_10/index.html
@@ -95,9 +95,26 @@
 
 <script>
 
+function handleCheck(e) {
+  console.log(e)
+  let inBetween = false
+  if (e.shiftKey && this.checked) {
+    checkboxes.forEach(checkboxes => {
+      console.log(checkboxes)
+      if (checkboxes === this || checkbox === lastChecked) {
+        inBetween = !inBetween
+      }
+    })
+  }
+
+  lastChecked = this
+}
+
+let lastChecked
+
 const checkboxes = document.querySelectorAll(".inbox input[type='checkbox']")
 
-checkboxes.forEach(checkbox => checkbox.addEventListener("click"))
+checkboxes.forEach(checkbox => checkbox.addEventListener("click", handleCheck))
 
 </script>
 
