--- a/hold_shift_10/index.html
+++ b/hold_shift_10/index.html
@@ -101,8 +101,12 @@ function handleCheck(e) {
   if (e.shiftKey && this.checked) {
     checkboxes.forEach(checkboxes => {
       console.log(checkboxes)
-      if (checkboxes === this || checkbox === lastChecked) {
+      if (checkboxes === this || checkboxes === lastChecked) {
         inBetween = !inBetween
+      }
+
+      if (inBetween) {
+        checkboxes.checked = true
       }
     })
   }
