add finished code

--- a/13_slide_in_scroll/index.html
+++ b/13_slide_in_scroll/index.html
@@ -61,7 +61,20 @@
     const sliderImages = document.querySelectorAll(".slide-in")
 
     function checkSlide(e) {
-      console.log(e)
+      sliderImages.forEach(slideImage => {
+        // half way through image
+        const slideInAt = (window.scrollY + window.innerHeight) - slideImage.height / 2
+        // Bottom of image
+        const imageBottom = slideImage.offsetTop + slideImage.height
+        const isHalfShown = slideInAt > slideImage.offsetTop
+        const isNotScrolledPast = window.scrollY < imageBottom
+
+        if (isHalfShown && isNotScrolledPast) {
+          slideImage.classList.add("active")
+        } else {
+          slideImage.classList.remove("active")
+        }
+      })
     }
 
     window.addEventListener("scroll", debounce(checkSlide))
