--- a/14_objects_and_arrays/index.html
+++ b/14_objects_and_arrays/index.html
@@ -9,12 +9,30 @@
   <script>
     // start with strings, numbers and booleans
 
+    let age = 100
+    let age2 = age
+    console.log(age, age2)
+    age = 200
+    console.log(age, age2)
+
+    let name = "Wes"
+    let name2 = name
+    console.log(name, name2)
+    name = "wesley"
+    console.log(name, name2)
+
+
+
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
-    // and we want to make a copy of it.
 
+    // and we want to make a copy of it.
+    const team = players
+
+    console.log(players, team)
     // You might think we can just do something like this:
+    team[3] = "Lux"
 
     // however what happens when we update that array?
 
@@ -25,14 +43,24 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
+    const team2 = players.slice()
+    console.log(team2)
+
+    const team3 = [].concat(players)
+    console.log(players)
 
     // one way
+    const team4 = [...players]
+    console.log(team4)
 
     // or create a new array and concat the old one in
 
     // or use the new ES6 Spread
 
     // now when we update it, the original one isn't changed
+
+    const team5 = array.from(players)
+    console.log(team5)
 
     // The same thing goes for objects, let's say we have a person object
 
@@ -43,10 +71,15 @@
     };
 
     // and think we make a copy:
+    const captian = person
+    captian.number = 99
 
     // how do we take a copy instead?
-
+    const cap2 = Object.assign({}, person, {number:99})
+    console.log(cap2)
+    
     // We will hopefully soon see the object ...spread
+
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
 
